style.css
/* ... */
#try-for-free a {
    color: #3A9B79;
    font-size: 1.2em;
}

#try-for-free a:hover {
    color: #3A9B79;
}

#webinar h3 {
    margin-top: 0em;
}

#webinar h4 {
    font-weight: 400;
    margin-top: 0em;
}

#webinar h5 {
    margin-top: 0em;
}


#webinar .row {
    margin: 0.5em 0em;
}

#type-safe h5 {
    margin-top: 0em;
    font-weight: 400;
}

#contribute .lightgray {
    background-color: #a7b2b92e;
    padding: 0 2em 1.5em 2em;
}

#contribute h4 {
    font-size: 1.2em;
    text-transform: uppercase;
    font-weight: 400;
}

#contribute-init .lightgray {
    background-color: #f5f5f5;
    padding: 0 2em 1.5em 2em;
    margin: 0em 1em;
}

#requirements .lightgray {
    background-color: #a7b2b92e;
    padding: 2em 2em 1em 2em;
}

#requirements h5 {
    margin: 0px;
}

/* FULL POPOVER CSS FOR ALL POPOVERS */
#type-safe .popover {
    border-radius: 0px;
    font-family: "Source Code Pro";
    width: 100%;
}
#type-safe .popover-content {
    padding: 9px 14px;
}
#type-safe .popover > .arrow,
#type-safe .popover > .arrow:after {
    border-color: transparent;
    border-style: solid;
}
#type-safe .popover > .arrow {
    border-width: 11px;
}
#type-safe .popover > .arrow:after {
    content: "";
    border-width: 10px;
    border-color: #CDD5DC;
}
#type-safe .popover.right > .arrow {
}
#type-safe .popover.right > .arrow:after {
}
#type-safe .popover.bottom > .arrow {
}
#type-safe .popover.bottom > .arrow:after {
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}

#inlineFormInput {
    height: 52px;
    border-radius: 3px;
    font-size: 15px;
    font-weight: lighter;
    float: left;
    margin-right: 6px;
    color: #949698;
    border: 2px solid white;
    box-shadow: 0 0 8px 0 rgba(176, 176, 176, 0.5);
}

#subpage-hero {
    /*background-image: linear-gradient(to right top, #2171ad, #0088b6, #009db3, #00afa6, #5abf95);*/
    background: #1B3747;
}

#subpage-hero #first-view-text-wrapper {
    padding: 6em 0em 3em 0em;
}

#first-view button {
    min-width: 140px;
    height: 52px;
    border-radius: 3px;
    background-color: #3a9b79;
}

#first-view button:hover{
    background-color: #5abf95;
}

#sql-java-table c {
    font-size: 0.9em;
}

#sql-java-table p {
    font-size: 0.9em;
}

#sql-java-table .table td {
    padding: 0.4em;
    border-top: none;
}

#sql-java h1 {
    margin-top: 0em;
    line-height: 1.2em;
    font-size: 2.5em;
}

#sql-java-table h5 {
    margin-top: 0.6em;
    font-weight: 600;
    font-size: 1.3em;
}

#sql-java .btn {
    color: white;
    font-size: 1.2em;
    padding: 0.7em 1.5em;
    margin: 0em 1em 0em 0em;
}

.breadcrumb {
    padding: 0px;
    margin-bottom: 1rem;
    list-style: none;
    font-family: "Titillium Web";
    font-style: italic;
    font-size: 1.2rem;
}

#info-one {
    text-align: center;
    padding: 20px 5px 60px 5px;
}
#speedment-description {
    font-size: 200%;
    text-align: left;
}

#speedment-description .textwidget {
    padding: 3em 0em 3em 0em;
}

#speedment-description p {
    margin-bottom: 0;
}

#why-speedment {
    text-align: center;
    background-color: #F2FDFD;
    color: black;
    padding: 3em 0em;
    font-family: "Source Sans Pro"
}

#why-speedment h2 {
    text-transform: none;
    font-size: 2em;
}

#why-speedment .widget-icon {
    font-size: 1000%;
    color: white;
}

#why-speedment img {
    height: 88px;
}

#why-speedment .big_boxes_title {
    font-family: 'Titillium Web';
    font-weight: 600;
}

#why-speedment span {
    font-size: 120%;
}

#small-boxes {
    padding-top: 50px;
    padding-bottom: 50px;
    text-align: center;
    font-family: "Titillium Web";
}

#small-boxes .widget-icon {
    font-size: 400%;
    color: #5a6b72;
}

#small-boxes a {
    color: #5a6b72;
    font-family: "Titillium Web";
}

#small-boxes h5 {
    margin-top: 10px;
}

#guides {
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: #cce7ff;
}

#guides h3 {
    font-family: 'Titillium Web';
    font-weight: 600;
    text-transform: uppercase;
}

#guides .fa-gamepad {
    font-size: 1500%;
    opacity: 0.5;
    margin-top: -50px;
    margin-bottom: -50px;
}

#guides a {
    color: #3a9b79;
    font-size: 110%;
}

#company-logos {
    padding-top: 50px;
    padding-bottom: 50px;
}


.center {
    text-align: center;
}

#product-view {
    margin-bottom: 0;
    background-position: 60% 20%;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    padding: 5rem 0rem;
}

#product-view #product-view-text-wrapper {
    color: white;
    text-align: center;
}

#product-view #product-view-text-wrapper h1 {
    font-size: 4rem;
}

#product-view .hazelcast #product-view-text-wrapper h1 {
    font-size: 3.2rem;
}


#product-view #product-view-text-wrapper h3,
#first-view-text-wrapper h3 {
    font-family: "Source Sans Pro";
    font-weight: 400;
    line-height: 1.3em;
    font-size: 1.5em;
}


#product-view #product-view-text-wrapper #product-view-button-area {
    padding: 0.1em 0em;
    margin-top: 1.3em;
}

#product-view-button-area .btn {
    font-size: 1.1em;
}

#product-view-button-area .btn-primary,
#stream-footer .btn-primary,
#hyperstream-footer .btn-primary {
    background-color: #4BB0B2;
    border-color: #4BB0B2;
    color: black;
}

#product-view-button-area .btn-secondary {
    margin-right: 1em;
}

#tools-page h2 {
    font-size: 2.2em;
    text-transform: none;
    line-height: 1.2em;
}

#tools-page .quote {
    font-style: italic;
    font-size: 1.8em;
}

.full-width-product-view {
    width: 90%;
    max-width: 1200px;
}

#related-resources .center-button {
    margin: 2em 0em;
}

#related-resources .title-area {
    padding-top: 1.5em;
    padding-bottom: 0.5em;
    text-transform: uppercase;
    font-size: 1.2em;
}
/* ... */

